about info addition and fixed spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,6 +8,8 @@ h4 {
 
 p {
 	color: orange;
+	margin: 0;
+	padding: 0;
 }
 
 li {
